--- a/style.css
+++ b/style.css
@@ -1,8 +1,25 @@
 .carrousel {
+  display: none;
   position: absolute;
-  width: 300px;
-  height: 300px;
+  width: 50%;
+  height: 50%;
   border: 2px solid black;
+  background-color: rgba(128, 128, 128, 0.25);
+  top: 25%;
+  left: 25%;
+  z-index: 1;
+}
+
+.carrousel-ouvrir {
+  display: block;
+}
+
+.carrousel_x {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 1rem 0.5rem;
+  border: 1px solid blue;
 }
 
 .bouton_ouvrir {
