--- a/style.css
+++ b/style.css
@@ -1,27 +1,56 @@
 .carrousel {
-  display: none;
-  position: absolute;
-  width: 50%;
-  height: 50%;
-  border: 2px solid black;
-  background-color: rgba(128, 128, 128, 0.25);
-  top: 25%;
-  left: 25%;
+  transform: scale(0);
+  transition: transform 0.25s;
+  position: fixed;
+  width: 100%;
+  height: 90%;
+  border: 2px solid rgb(9, 69, 166);
+  background-color: rgba(0, 255, 0, 0.5);
+  top: 0;
+  left: 0;
   z-index: 1;
 }
-
-.carrousel-ouvrir {
-  display: block;
+@media screen and (min-width: 400px) {
+  .carrousel {
+    width: 75%;
+    height: 75%;
+    top: 12.5%;
+    left: 12.5%;
+  }
 }
 
-.carrousel_x {
+.carrousel__x {
   position: absolute;
-  right: 0;
-  top: 0;
-  padding: 1rem 0.5rem;
-  border: 1px solid blue;
+  right: 10px;
+  top: 10px;
+  padding: 5px 8px;
+  border: 1px solid #555;
+  z-index: 100;
 }
 
-.bouton_ouvrir {
+.carrousel__x:hover {
+  background-color: rgb(225, 84, 18);
+}
+
+.carrousel__figure {
+  width: 100%;
+  height: 100%;
+}
+
+.carrousel__img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  opacity: 1;
+}
+
+.carrousel--ouvrir {
+  transform: scale(1);
+}
+
+.bouton__ouvrir {
   width: 200px;
 }/*# sourceMappingURL=style.css.map */
