--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   top: 0;
   left: 0;
   z-index: 1;
+  margin-bottom: 10rem;
 }
 @media screen and (min-width: 400px) {
   .carrousel {
@@ -45,6 +46,23 @@
   left: 0;
   object-fit: cover;
   opacity: 1;
+}
+
+.carrousel__form {
+  position: absolute;
+  top: 50%;
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  border: 2px white solid;
+  border-radius: 3rem;
+}
+
+.carrousel__form > input[type=radio] {
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .carrousel--ouvrir {
