--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,18 +47,7 @@
     left: 0;
     object-fit: cover;
     opacity: 1; // rend les images invisible
-}
-
-.carrousel__img {
-    transition: transform 0.3s ease-in-out;
-}
-
-.carrousel__img.scale-down {
-    transform: scale(0.8);
-}
-
-.carrousel__img.scale-up {
-    transform: scale(1);
+    transition: opacity 0.3s ease-in-out;
 }
 
 .carrousel__form {
