--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@
   top: 0;
   left: 0;
   object-fit: cover;
-  opacity: 1;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .carrousel__form {
