--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
   position: fixed;
   width: 100%;
   height: 90%;
-  border: 2px solid rgb(9, 69, 166);
-  background-color: rgba(0, 255, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.25);
   top: 0;
   left: 0;
   z-index: 1;
@@ -73,4 +72,28 @@
 
 .bouton__ouvrir {
   width: 200px;
+}
+
+.carrousel__prev, .carrousel__next {
+  position: absolute;
+  top: 90%;
+  padding: 10px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.75);
+  color: white;
+  cursor: pointer;
+  font-size: 1.5em;
+  z-index: 100;
+}
+
+.carrousel__prev {
+  left: 10px;
+}
+
+.carrousel__next {
+  right: 10px;
+}
+
+.carrousel__prev:hover, .carrousel__next:hover {
+  background-color: rgb(0, 0, 0);
 }/*# sourceMappingURL=style.css.map */
